# seraphim

./: .coveragerc  README.md  TODO  api.py  app.py  pyproject.toml
.github/workflows/: ci.yml
example/: app.py
example/templates/: index.html
rabat/: __init__.py  api.py  orm.py  response.py
seraphim/: orm.py
src/: api.py  app.py
templates/: index.html
tests/: conftest.py  test_allowed_methods.py  test_custom_response.py  test_exceptions.py  test_middleware.py  test_orm.py  test_routes.py  test_static_files.py  test_templates.py
tests/resources/: test.db
